version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/SectypeCommand.rst.txt
.. vale off



:class:`SectypeCommand`
=======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.SectypeCommand(iSectypeCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.ISectypeCommand)

   Bases: :py:obj:`object`


   
   Represents a SECTYPE command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SectypeCommand

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FullName`
            - FullName property.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~RefineKey`
            - Mesh refinement level for thin-walled beam sections. Default is zero. Meaningless if type is not BEAM.
          * - :py:attr:`~Secid`
            - Gets the section type number.
          * - :py:attr:`~Secname`
            - Gets the section name.
          * - :py:attr:`~Subtype`
            - Gets the subtype.
          * - :py:attr:`~ToCdbCommandString`
            - Gets the command text formatted as a CDB file entry.
          * - :py:attr:`~Type`
            - Get the type.







Property detail
---------------
.. py:property:: FullName
   :type: Optional[str]


   
   FullName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: RefineKey
   :type: Optional[int]


   
   Mesh refinement level for thin-walled beam sections. Default is zero. Meaningless if type is not BEAM.
















   ..
       !! processed by numpydoc !!

.. py:property:: Secid
   :type: Optional[int]


   
   Gets the section type number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Secname
   :type: Optional[str]


   
   Gets the section name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Subtype
   :type: Optional[str]


   
   Gets the subtype.
















   ..
       !! processed by numpydoc !!

.. py:property:: ToCdbCommandString
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter]


   
   Gets the command text formatted as a CDB file entry.
   Gets the command parameters formatted as a string.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[str]


   
   Get the type.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on